fixed overflow issue

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -12,7 +12,7 @@ html, body {
 	font-family: $font-family_1;
 	margin: 0;
 	padding: 0;
-	overflow: auto;
+	overflow: hidden;
 	overscroll-behavior: auto;
 	height: 100%;
 	width: 100%;
